tests/paczka1/fuzzy1/70343616.err
Error in line 7: A513 S868 50,0
Error in line 5: Tl93Di S157 25,5
Error in line 11: VklHCG A513 27,8
